@@ -1,3 +1,6 @@
+2009-07-14 Fix a few bugs in ConnectionStyle algorithms. Add 
+           ConnectionPatch class. -JJL
+
 2009-07-11 Added a fillstyle Line2D property for half filled markers
            -- see examples/pylab_examples/fillstyle_demo.py JDH
 
